<resources>
    <string name="app_name">PhoneSecurity</string>
    <string name="splash_screen_text">Программа помощи аудитору по проведению аудита информационной 
        безопасности операционной системы Android</string>
    <string name="about_application_item_menu">О программе</string>
    <string name="about_programm_message_dialog">Программа, предназначенная для помощи проведения аудита
        информационной безопасности мобильных устройств на операционной системе Android. \n Версия: v 0.1 . \n Автор: студент 4 курса,
        группы ИБб-141, \n Патык Ю.В.</string>
    <string name="ok">Ok</string>
    <string name="os_android">OS Android</string>
    <string name="android_version">Версия Android</string>
    <string name="version_prosh">Версия прошивки</string>
    <string name="number_assemb">Номер сборки</string>
    <string name="po_security">Версия ПО безопасности</string>
    <string name="version_KNOX">Версия KNOX</string>
    <string name="level_security">Уровень безопасности</string>
    <string name="applications">Установленные приложения</string>
    <string name="root_prava">Открыты ли root-права</string>
    <string name="next">Далее</string>
    <string name="version_android_above_4">Версия Android выше 4?</string>
    <string name="weight">Вес</string>
    <string name="is_hava_antivirus">Установлен антивирус?</string>
    <string name="is_root">Права root открыты?</string>
    <string name="is_system_permissions">Система разрешений настроена правильно?</string>
    <string name="sms">SMS</string>
    <string name="contakts">Контактам</string>
    <string name="camera">Камере</string>
    <string name="location">Местоположению</string>
    <string name="microphone">Микрофону</string>
    <string name="disc">Доступ к диску</string>
    <string name="ident_data">Доступ к идентификационным данным</string>
    <string name="buys">Покупкам в приложении</string>
    <string name="prosh">5.\tНа устройстве используются неофициальные или сторонние прошивки?</string>
    <string name="knox">6.\tУстройство поддерживает KNOX</string>
    <string name="internet">7.\tИмеется выход в интернет?</string>
    <string name="protect_internet">Выход в интернет защищен?</string>
    <string name="calculate_risk">Рассчитать риск</string>
    <string name="recomendation">Показать рекомендации</string>


    <string name="t_1">Обновить систему до последней версии</string>
    <string name="t_2">Установить антивирусное ПО с официального сайта поставщика</string>
    <string name="t_3">Закрыть root права и просканировать мобильное устройство</string>
    <string name="t_4">Настроить систему разрешений правильно. Рекомендуем обратиться за помощью к специалисту</string>

    <string name="t_5">У приложения есть доступ к SMS</string>
    <string name="t_6">У приложения есть доступ к контактам</string>
    <string name="t_7">У приложения есть доступ к камере</string>
    <string name="t_8">У приложения есть доступ к местоположению</string>
    <string name="t_9">У приложения есть доступ к микрофону</string>
    <string name="t_10">У приложения есть доступ к диску</string>
    <string name="t_11">У приложения есть доступ к идентификационным данным</string>
    <string name="t_12">У приложения есть доступ к покупкам в приложении</string>

    <string name="t_13">Установить прошивку последней версии от официального поставщика</string>
    <string name="t_14">Обновить систему до последней версии, установить KNOX</string>
    <!-- пункт 15 не надо -->
    <string name="t_16">Поставить защиту на браузер или на то приложение, откуда осуществляется выход в интернет.</string>
    <string name="recalculate">Пересчитать</string>
    <string name="rec">Для переоценки рисков предлагается выбрать рекомендации (механизмы защиты), которые Вы планируете применить (установить):</string>
    <string name="exit_btn">Закрыть приложение</string>


</resources>
