<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:background="@color/blue_10"
    android:layout_margin="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uvpatik.android.phonesecurity.activities.InfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- android version -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/version_android_above_4" />

                <CheckBox
                    android:id="@+id/cb_version_android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/et_version_android"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weight" />

            </LinearLayout>

            <!-- антивирус -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/is_hava_antivirus" />

                <CheckBox
                    android:id="@+id/cb_have_antivirus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/et_have_antivirus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weight" />

            </LinearLayout>

            <!-- root -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/is_root" />

                <CheckBox
                    android:id="@+id/cb_root"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_root"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weight" />

            </LinearLayout>

            <!-- система разрешений -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/is_system_permissions" />

                <CheckBox
                    android:id="@+id/cb_system_permissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/et_system_permissions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weight" />

            </LinearLayout>

            <!-- collapse list -->
            <LinearLayout
                android:id="@+id/container_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <!-- SMS -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/sms" />

                    <CheckBox
                        android:id="@+id/cb_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/et_sms"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight" />
                </LinearLayout>

                <!-- contacts -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/contakts" />

                    <CheckBox
                        android:id="@+id/cb_contakts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/et_contakts"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight" />

                </LinearLayout>

                <!-- camera -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/camera" />

                    <CheckBox
                        android:id="@+id/cb_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/et_camera"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight" />
                </LinearLayout>

                <!-- location -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/location" />

                    <CheckBox
                        android:id="@+id/cb_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/et_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight" />
                </LinearLayout>

                <!-- microphone -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/microphone" />

                    <CheckBox
                        android:id="@+id/cb_microphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/et_microphone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight" />
                </LinearLayout>

                <!-- disc -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/disc" />

                    <CheckBox
                        android:id="@+id/cb_disc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/et_disc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight" />
                </LinearLayout>

                <!-- ident data -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/ident_data" />

                    <CheckBox
                        android:id="@+id/cb_ident_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/et_ident_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight" />
                </LinearLayout>

                <!-- buy in app -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/buys" />

                    <CheckBox
                        android:id="@+id/cb_buys"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/et_buys"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/weight" />
                </LinearLayout>
            </LinearLayout>

            <!-- прошивки -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/prosh" />

                <CheckBox
                    android:id="@+id/cb_prosh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/et_prosh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weight" />
            </LinearLayout>

            <!-- knox -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/knox" />

                <CheckBox
                    android:id="@+id/cb_knox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/et_knox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weight" />
            </LinearLayout>

            <!-- internet -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/internet" />

                <CheckBox
                    android:id="@+id/cb_internet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/et_internet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weight" />
            </LinearLayout>

            <!-- collapse internet -->
            <LinearLayout
                android:id="@+id/container_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/protect_internet" />

                <CheckBox
                    android:id="@+id/cb_protect_internet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/et_protect_internet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weight" />
            </LinearLayout>

            <Button
                android:id="@+id/calculate_risk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/calculate_risk" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
